; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showspectrum.c_get_time.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showspectrum.c_get_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"0\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%.2fh\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"%.2fm\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"%.2fs\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, float, i32)* @get_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_time(i32* %0, float %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = call i8* (i8*, ...) @av_asprintf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %7, align 8
  br label %36

12:                                               ; preds = %3
  %13 = load float, float* %5, align 4
  %14 = call i32 @log10(float %13)
  %15 = icmp sgt i32 %14, 6
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load float, float* %5, align 4
  %18 = fdiv float %17, 3.600000e+03
  %19 = fpext float %18 to double
  %20 = call i8* (i8*, ...) @av_asprintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), double %19)
  store i8* %20, i8** %7, align 8
  br label %35

21:                                               ; preds = %12
  %22 = load float, float* %5, align 4
  %23 = call i32 @log10(float %22)
  %24 = icmp sgt i32 %23, 3
  br i1 %24, label %25, label %30

25:                                               ; preds = %21
  %26 = load float, float* %5, align 4
  %27 = fdiv float %26, 6.000000e+01
  %28 = fpext float %27 to double
  %29 = call i8* (i8*, ...) @av_asprintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), double %28)
  store i8* %29, i8** %7, align 8
  br label %34

30:                                               ; preds = %21
  %31 = load float, float* %5, align 4
  %32 = fpext float %31 to double
  %33 = call i8* (i8*, ...) @av_asprintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), double %32)
  store i8* %33, i8** %7, align 8
  br label %34

34:                                               ; preds = %30, %25
  br label %35

35:                                               ; preds = %34, %16
  br label %36

36:                                               ; preds = %35, %10
  %37 = load i8*, i8** %7, align 8
  ret i8* %37
}

declare dso_local i8* @av_asprintf(i8*, ...) #1

declare dso_local i32 @log10(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
